--- a/Javascript/js-basics-ii.html
+++ b/Javascript/js-basics-ii.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JS Basic I</title>
+    <title>JS Basic II</title>
     
     <!-- ASSIGNMENT STARTS HERE -->
     <script>
