--- a/Javascript/JSOOP/ninja-class-ii.html
+++ b/Javascript/JSOOP/ninja-class-ii.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JS Ninja Class I</title>
+    <title>JS Ninja Class II</title>
     
     <!-- ASSIGNMENT STARTS HERE -->
     <script>
@@ -30,6 +30,43 @@
                 this.health += 10;
                 console.log("Drank sake! It added 10 points to " + this.name + "'s health!");
             }
+            this.punch = function(enemy)
+            {
+                if(enemy instanceof Ninja == false)
+                {
+                    console.log("Hey! That is not the ninja way!");
+                }
+                else
+                {
+                    enemy.health -= 5;
+                    console.log(enemy.name + " was punched by " + this.name + " and lost 5 health points!");
+                }
+            }
+            this.kick = function(enemy)
+            {
+                if(enemy instanceof Ninja == false)
+                {
+                    console.log("Hey! That is not the ninja way!");
+                }
+                else
+                {
+                    let kickstrength = privateStrength * 15;
+                    enemy.health -= kickstrength;
+                    console.log(enemy.name + " was kicked by " + this.name + " and lost " + kickstrength + " health points!");
+                    console.log(enemy.name + "'s health is now " + enemy.health + "!");
+                }
+            }
+        }
+
+        function Doggy(name)
+        {
+            const self = this;
+            this.name = name;
+
+            this.beCute = function(name)
+            {
+                console.log("My doggy name is " + this.name + " and I am the cutest!");
+            }
         }
 
         const chelsea = new Ninja("Chelsea");
@@ -49,6 +86,14 @@
         morty.showStats();
         morty.drinkSake();
         morty.showStats();
+
+        const maggie = new Doggy("Maggie");
+        maggie.beCute();
+
+        // MAKE THEM FIGHT!
+        chelsea.punch(morty);
+        chelsea.kick(morty);
+        jessica.kick(maggie);
         
     </script>
     <!-- ASSIGNMENT ENDS HERE -->
