--- a/Javascript/JSOOP/ninja-class-iii.html
+++ b/Javascript/JSOOP/ninja-class-iii.html
@@ -77,7 +77,7 @@
             {
                 this.drinkSake();
                 console.log("Sensei is drinking sake. Incoming wisdom...");
-                console.log("It was just drunken rambling but Sensei " + this.name + "'s health is now " + this.health + "!");
+                console.log("What? It's just Sensei " + this.name + "'s drunken rambling!");
             }
         }
 
@@ -89,6 +89,7 @@
 
         const senseiJessica = new Sensei("Jessica");
         senseiJessica.speakWisdom();
+        senseiJessica.showStats();
         
     </script>
     <!-- ASSIGNMENT ENDS HERE -->
