--- a/Javascript/JSOOP/ninja-class-i.html
+++ b/Javascript/JSOOP/ninja-class-i.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JS Ninja Class I</title>
+    <title>JS NINJA CLASS I</title>
     
     <!-- ASSIGNMENT STARTS HERE -->
     <script>
