--- a/Javascript/JSOOP/ninja-class-iii.html
+++ b/Javascript/JSOOP/ninja-class-iii.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JS Ninja Class III</title>
+    <title>JS NINJA CLASS III</title>
     
     <!-- ASSIGNMENT STARTS HERE -->
     <script>
@@ -77,7 +77,7 @@
             {
                 this.drinkSake();
                 console.log("Sensei is drinking sake. Incoming wisdom...");
-                console.log("What? It's just Sensei " + this.name + "'s drunken rambling!");
+                console.log("What?! It's just Sensei " + this.name + "'s drunken rambling?!");
             }
         }
 
