--- a/Angular/anon-notes/angular-anon/src/index.html
+++ b/Angular/anon-notes/angular-anon/src/index.html
@@ -5,10 +5,11 @@
   <title>AngularAnon</title>
   <base href="/">
 
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="container">
   <app-root></app-root>
 </body>
 </html>
